# rust-nn

./: .gitignore  Cargo.toml  Iris.csv  classification.csv
data/: 2d-2class-dataset.csv  2d-2class-dataset_r.csv  Dry_Bean_Dataset.csv  Iris.csv  test_data.csv
src/: activation.rs  data_processing.rs  errors.rs  ex.py  generative.rs  layer.rs  layers.rs  loader.rs  loss.rs  main.rs  network.rs  neuron.rs  preludes.rs  regularization.rs  utils.rs  weights.rs
src/enviroment/: entity.rs  mod.rs
src/stand/: mod.rs
