[package]
name = "rust-nn"
version = "0.1.0"
edition = "2021"


[dependencies]
ndarray = { version = "0.15.0", features = ["rayon"]}
thiserror="1.0.32"
rand="0.8.5"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rayon="1.5.3"
plotters = "0.3"
serde_json = "1.0.85"
piston = "0.53.2"
piston2d-graphics = "0.43.0"
pistoncore-glutin_window = "0.70.1"
piston2d-opengl_graphics = "0.82.0"